@@ -20,6 +20,7 @@
 	(PokerRendererTests.test06_sitOutButWithGameBadPlayer): Wrote test.
 	(PokerRendererTests.test07_chatFormatMessage): Wrote method.
 	(PokerRendererTests.test08_chatLineNoGame): Wrote method.
+	(PokerRendererTests.test09_showMessageNoCallback): Wrote method.
 
 2008-07-07  Johan Euphrosine  <proppy@aminche.com>
 
